# uprovision

./: LICENSE  README.md  meson.build  meson_options.txt
include/: device.h  meson.build  uprov.h
src/: device.c  meson.build
src/executables/: uprov.c  uprovision.c
tests/: meson.build  test-device.c
