option('file-offset-bits',
	type: 'integer', value: 64,
	description: 'Sets the _FILE_OFFSET_BITS macro')

option('tests',
      type: 'boolean', value: false,
      description: 'Build tests')

option('block-device',
      type: 'string', value: '/dev/mmcblk0',
      description: 'Stores path to block device')
